[gd_scene load_steps=13 format=3 uid="uid://hyr7i2wnah4e"]

[ext_resource type="Script" path="res://entities/objects/well/fireWell/FireWell.gd" id="1_qw6cr"]
[ext_resource type="Texture2D" uid="uid://cxe6hu7quuq4d" path="res://entities/objects/well/assets/wellEmpty.png" id="2_r3hi0"]
[ext_resource type="Texture2D" uid="uid://4qlm6ho7173m" path="res://assets/light_noise/offset_glow.png" id="3_etva4"]
[ext_resource type="Shader" path="res://shader/wobbleEffect.gdshader" id="4_okffb"]
[ext_resource type="Texture2D" uid="uid://dgn2ljfyurcci" path="res://entities/objects/well/assets/fire.png" id="5_5wk88"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_2wsyv"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_puv8v"]
offsets = PackedFloat32Array(0.0430464, 0.327869, 0.631148, 1)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_e7xoi"]
gradient = SubResource("Gradient_puv8v")

[sub_resource type="Curve" id="Curve_3c8ug"]
_data = [Vector2(0, 0.502392), 0.0, 0.0, 0, 0, Vector2(0.515152, 0.782297), 0.0, 0.0, 0, 0, Vector2(1, 0.455742), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_xmhfi"]
curve = SubResource("Curve_3c8ug")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_j1tol"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 32.15
angle_max = 360.0
direction = Vector3(0, -1, 0)
initial_velocity_min = 0.5
initial_velocity_max = 1.0
angular_velocity_min = -250.0
angular_velocity_max = 250.0
gravity = Vector3(0, -150, 0)
scale_min = 0.4
scale_max = 0.8
scale_curve = SubResource("CurveTexture_xmhfi")
color_ramp = SubResource("GradientTexture1D_e7xoi")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tmpgh"]
shader = ExtResource("4_okffb")
shader_parameter/speed = 9.26
shader_parameter/minStrength = 0.097
shader_parameter/maxStrength = 0.783
shader_parameter/strengthScale = 79.17
shader_parameter/interval = 13.435
shader_parameter/detail = 1.0
shader_parameter/distortion = 0.807
shader_parameter/heightOffset = 0.6
shader_parameter/offset = 0.0

[node name="FireWell" type="Area2D"]
collision_mask = 4
script = ExtResource("1_qw6cr")

[node name="FillLabel" type="Panel" parent="."]
visible = false
offset_left = -79.0
offset_top = -208.0
offset_right = 80.0
offset_bottom = -184.0

[node name="Burning" type="Label" parent="FillLabel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "kill all close enemies"
metadata/_edit_lock_ = true

[node name="Texture" type="Sprite2D" parent="."]
position = Vector2(0, -37)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_r3hi0")
region_enabled = true
region_rect = Rect2(234.355, 263.688, 918.995, 736.313)
metadata/_edit_lock_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="Texture"]
scale = Vector2(6.66667, 6.66667)
collision_mask = 0
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Texture/StaticBody2D"]
position = Vector2(10.8713, -6)
scale = Vector2(10.5794, 5.49783)
polygon = PackedVector2Array(-6.98257, -4.91103, -6.98257, 7.82126, 4.73834, 7.82126, 4.73834, -5.09292, 3.60405, -6.91181, 1.52454, -8.00315, -1.02759, -8.36693, -3.8633, -8.00315, -5.94281, -6.91181)

[node name="FlammePart" type="GPUParticles2D" parent="."]
modulate = Color(0.772549, 0, 0, 1)
material = SubResource("CanvasItemMaterial_2wsyv")
position = Vector2(0, -92)
amount = 20
process_material = SubResource("ParticleProcessMaterial_j1tol")
texture = ExtResource("3_etva4")

[node name="Flamme" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_tmpgh")
position = Vector2(3, -101)
scale = Vector2(0.153, 0.159)
texture = ExtResource("5_5wk88")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
